@@ -3,6 +3,7 @@
 * Worldpay: XML encoding is required to be ISO-8859-1 [dougal]
 * Worldpay: Add card code for more supported card types [dougal]
 * Ogone: Add action option [pwoestelandt]
+* PayPal Express gateway: Add support for BuyerEmailOptInEnable [chrisrbnelson]
 
 == Version 1.30.0 (February 13, 2013)
 
